objects/Channel_Oppty_Header_Level_Change__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping of Opportunity Stage value with Part&apos;s confidence and Process status values</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidence__c</fullName>
        <label>Confidence</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <label>Process Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Channel Oppty Header Level Change</label>
</CustomObject>